--- a/templates/challenge_detail.html
+++ b/templates/challenge_detail.html
@@ -3,15 +3,20 @@
 {% block content %}
 <div class="row">
     <div class="col-md-12">
-        <h2>Challenge: {{ challenge.title }}</h2>
         
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2>Challenge: {{ challenge.title }}</h2>
+            <div>
+                <a href="{{ url_for('edit_challenge', challenge_id=challenge.id) }}" class="btn btn-outline-primary">Edit Challenge</a>
+            </div>
+        </div>
         <div class="card mb-4">
             <div class="card-header">
                 <h3>Challenge Details</h3>
             </div>
             <div class="card-body">
                 <h4>Description</h4>
-                <p>{{ challenge.description }}</p>
+                <p>{{ challenge.description | markdown | safe }}</p>
                 
                 <h4>Initial Code</h4>
                 <pre><code>{{ challenge.initial_code }}</code></pre>
