--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Student Dashboard - {{ session.get('student_email') }}</h2>
+<h2>Student Dashboard - {{ session.get('user_email') }}</h2>
 
 <div class="row mb-4">
     <div class="col">
