--- a/templates/tutor_dashboard.html
+++ b/templates/tutor_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Tutor Dashboard - {{ tutor.name }}</h2>
+<h2>Tutor Dashboard - {{ tutor.first_name }} {{ tutor.last_name }}</h2>
 
 <div class="row mb-4">
     <div class="col">
@@ -52,7 +52,7 @@
                         <tbody>
                             {% for submission in submissions %}
                                 <tr>
-                                    <td>{{ submission.student.last_name }}</td>
+                                    <td>{{ submission.user.last_name }}</td>
                                     <td>{{ submission.challenge.title }}</td>
                                     <td>{{ submission.created_at.strftime('%Y-%m-%d %H:%M') }}</td>
                                     <td>
