--- a/app/tutor/templates/tutor/edit_challenge.html
+++ b/app/tutor/templates/tutor/edit_challenge.html
@@ -30,7 +30,7 @@
             </div>
             
             <button type="submit" class="btn btn-primary">Update Challenge</button>
-            <a href="{{ url_for('challenge_detail', challenge_id=challenge.id) }}" class="btn btn-secondary">Cancel</a>
+            <a href="{{ url_for('tutor.challenge_detail', challenge_id=challenge.id) }}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
