--- a/app/student/templates/student/lesson_detail.html
+++ b/app/student/templates/student/lesson_detail.html
@@ -5,8 +5,8 @@
     <div class="col-md-12">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{{ url_for('student_dashboard') }}">Dashboard</a></li>
-                <li class="breadcrumb-item"><a href="{{ url_for('student_lessons') }}">Lessons</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('student.dashboard') }}">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('student.view_lessons') }}">Lessons</a></li>
                 <li class="breadcrumb-item active">{{ lesson.title }}</li>
             </ol>
         </nav>
@@ -45,7 +45,7 @@
                                     <p class="text-muted small">Last attempt: {{ challenge_data.last_submission.created_at.strftime('%Y-%m-%d %H:%M') }}</p>
                                 {% endif %}
                                 
-                                <a href="{{ url_for('student_challenge', challenge_id=challenge_data.challenge.id) }}" class="btn btn-primary mt-2">
+                                <a href="{{ url_for('student.challenge_detail', challenge_id=challenge_data.challenge.id) }}" class="btn btn-primary mt-2">
                                     {% if challenge_data.completed %}Review Challenge{% else %}Solve Challenge{% endif %}
                                 </a>
                             </div>
