--- a/app/tutor/templates/tutor/lesson_detail.html
+++ b/app/tutor/templates/tutor/lesson_detail.html
@@ -5,8 +5,8 @@
     <div class="col-md-12">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{{ url_for('tutor_dashboard') }}">Dashboard</a></li>
-                <li class="breadcrumb-item"><a href="{{ url_for('tutor_lessons') }}">Lessons</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('tutor.dashboard') }}">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('tutor.view_lessons') }}">Lessons</a></li>
                 <li class="breadcrumb-item active">{{ lesson.title }}</li>
             </ol>
         </nav>
@@ -14,7 +14,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Lesson: {{ lesson.title }}</h2>
             <div>
-                <a href="{{ url_for('edit_lesson', lesson_id=lesson.id) }}" class="btn btn-outline-primary">Edit Lesson</a>
+                <a href="{{ url_for('tutor.edit_lesson', lesson_id=lesson.id) }}" class="btn btn-outline-primary">Edit Lesson</a>
             </div>
         </div>
         
@@ -39,7 +39,7 @@
                                     </div>
                                 </div>
                                 <p class="mb-1">{{ challenge_data.challenge.description|truncate(100) | markdown | safe }}</p>
-                                <a href="{{ url_for('challenge_detail', challenge_id=challenge_data.challenge.id) }}" class="btn btn-sm btn-outline-secondary mt-2">View Challenge</a>
+                                <a href="{{ url_for('tutor.challenge_detail', challenge_id=challenge_data.challenge.id) }}" class="btn btn-sm btn-outline-secondary mt-2">View Challenge</a>
                             </div>
                         {% endfor %}
                     </div>
