--- a/app/tutor/templates/tutor/dashboard.html
+++ b/app/tutor/templates/tutor/dashboard.html
@@ -6,6 +6,7 @@
         <a href="{{ url_for('tutor.create_challenge') }}" class="btn btn-primary">Create New Challenge</a>
         <a href="{{ url_for('tutor.view_lessons') }}" class="btn btn-primary">Manage Lessons</a>
         <a href="{{ url_for('tutor.view_groups') }}" class="btn btn-primary">Manage Groups</a>
+        <a href="{{ url_for('tutor.view_questions') }}" class="btn btn-primary">Questions</a>
     </div>
 </div>
 <div class="row">
